# camarg

./: .clang-format  CMakeLists.txt  README.md
inc/: camarg.h
src/: camarg.cpp
test/: CMakeLists.txt  invalid_arg.cpp  invalid_cmd.cpp  invalid_flag.cpp  single_arg.cpp  single_cmd.cpp  single_flag.cpp
